<resources>
    <string name="app_name">UniChat</string>
    <string name="verify_number">+243 82 68 61 073</string>
    <string name="verify_txt">please type the verification code sent to</string>
    <string name="validate">validate</string>
    <string name="phone_number">Phone number</string>
    <string name="send">send</string>
    <string name="opt_verification">OPT Verification</string>
    <string name="one_time_password">One time password</string>
    <string name="we_will_send_you_an">We will send you an </string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="by_zgeniuscoders">By zgeniuscoders</string>
    <string name="required_field">This field is required</string>
    <string name="search">Recherche...</string>
    <string name="post_user_name">Coordination</string>
    <string name="post_time_ago">il ya 25 minutes</string>
    <string name="post_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur eaque fugit id maiores mollitia non qui similique unde? Adipisci aperiam asperiores consectetur eius, facilis nihil nulla sapiente sint tempore veritatis. Enim incidunt inventore nulla numquam, optio placeat tempora voluptatem!</string>
    <string name="online">online</string>
    <string name="messages">Messages...</string>
    <string name="username">ZGenius Coders</string>
    <string name="follow">follow</string>
    <string name="showProfile">show</string>
    <string name="groups">Groupes</string>
    <string name="quit">quit</string>
    <string name="all_groups">See all</string>
    <string name="group_name">Name</string>
    <string name="group_desc">Description</string>
    <string name="create">create</string>
    <string name="join">join</string>
    <string name="pseudo">Username</string>
    <string name="email">Email address</string>
    <string name="next">next</string>
    <string name="choose_department">Choose a your department</string>
    <string name="choose_faculty">Choose your faculty</string>
    <string name="send_opt">Sending opt...</string>
    <string name="userPresence">Online</string>
    <string name="userPresenceOffline">Offline</string>
    <string name="delete_for_everything">Delete for everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="msgDelete">This message is remove</string>
    <string name="deleteMsg">Delete Message</string>
</resources>