<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_for_everything"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_everything"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textStyle="bold|normal"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/delete_for_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_me"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textStyle="bold|normal"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textStyle="bold|normal"
        android:textSize="16sp"/>

</LinearLayout>