<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OPTVerifyActivity"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20dp">

        <TextView
            android:id="@+id/verify_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_txt"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/verify_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_number"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_20dp"/>

        <com.mukeshsolanki.OtpView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:inputType="number"
            app:OtpLineColor="@color/white"
            app:OtpViewType="rectangle"
            app:OtpItemRadius="5dp"
            android:focusableInTouchMode="true"
            app:OtpItemCount="6"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:backgroundTint="#00000000"
            android:background="#00000000"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>