<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_black_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_user_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/post_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/post_user_profile"
            android:text="@string/post_user_name"
            android:textColor="@color/dark_black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_time_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_user_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/post_user_profile"
            android:text="@string/post_time_ago" />

        <ImageView
            android:id="@+id/post_btn_message"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/baseline_email_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/post_content"
            android:textColor="@color/dark_black" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/btn_post_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_favorite_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100k" />
            </LinearLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/btn_post_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_email_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100k" />
            </LinearLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/btn_post_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/baseline_get_app_24" />
            </LinearLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </LinearLayout>
</LinearLayout>